--- a/raceresultswebapp/raceresultswebapp/templates/ownerconsole.html
+++ b/raceresultswebapp/raceresultswebapp/templates/ownerconsole.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
+{% block pagename %}
+    Owner Console
+{% endblock %}
 {% block body %}
-  <h2>Members Only</h2>
-  Successful login
 {% endblock %}
