--- a/raceresultswebapp/raceresultswebapp/templates/index.html
+++ b/raceresultswebapp/raceresultswebapp/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block pagename %}
+    Race Results
+{% endblock %}
 {% block body %}
   Welcome to Race Results
 {% endblock %}
