--- a/raceresultswebapp/raceresultswebapp/templates/ownermanageclub.html
+++ b/raceresultswebapp/raceresultswebapp/templates/ownermanageclub.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% from '_formhelpers.html' import render_field %}
 {% block pagename %}
     {{ thispagename }}
 {% endblock %}
@@ -6,25 +7,11 @@
   <form action="{{ cluburl }}" method=post>
     {{ form.hidden_tag() }}
     <div class="W9emLabel W25emTextBox FloatLeft">
-        <p>
-          {{ form.shname.label(class='Label') }}
-          {% if not displayonly %}
-            {{ form.shname(size=25) }}
-          {% else %}
-            {{ form.shname.data }}
-          {% endif %}
-        </p>
-        <p>
-          {{ form.name.label(class='Label') }}
-          {% if not displayonly %}
-            {{ form.name(size=25) }}
-          {% else %}
-            {{ form.name.data }}
-          {% endif %}
-        </p>
+        {{ render_field(form.shname,displayonly,size=25 )}}
+        {{ render_field(form.name,displayonly,size=25 )}}
         <center><a href={{url_for('manageclubs')}}><input type=button name=cancel value=Cancel /></a>
             {% if action %}
-                <input type=submit value={{action}} >
+                <input type=submit value="{{action}}" >
             {% endif %}
         </center>
   </form>
