--- a/raceresultswebapp/raceresultswebapp/templates/login.html
+++ b/raceresultswebapp/raceresultswebapp/templates/login.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% from '_formhelpers.html' import render_field %}
 {% block pagename %}
     Login
 {% endblock %}
@@ -6,14 +7,8 @@
   <form action="{{ url_for('login') }}" method=post>
     {{ form.hidden_tag() }}
     <div class="W9emLabel W20emTextBox FloatLeft">
-        <p>
-          {{ form.email.label(class='Label') }}
-          {{ form.email(size=20) }}
-        </p>
-        <p>
-          {{ form.password.label(class='Label') }}
-          {{ form.password(size=20) }}
-        </p>
+        {{ render_field(form.email,size=20) }}
+        {{ render_field(form.password,size=20) }}
         <center><input type=submit align=middle value=Login></center>
     </div>
   </form>
